2005-03-18 [holger]	0.2cvs5

	* src/perl_plugin.c
	* sc_perl.pod
		Add support for manual filtering invocation,
		update documentation.

2005-02-19 [holger]	0.2cvs4

	* src/perl_plugin.c
		Replace most GLists with GSLists, because I
		iterate in one direction only anyways.
		(hint by Alfons Hoogervorst)

2005-02-18 [holger]	0.2cvs3

	* src/perl_plugin.c
		Remove wrong use of compose struct after
		compose_send(). See version 1.0.1cvs5
		of HEAD.
		(reported by Alfons Hoogervorst)
	
2005-02-13 [holger]	0.2cvs2

	* src/perl_plugin.c
		Replace the strncpy calls with strncpy2 calls
		to make sure string is always null terminated
		(fix by Alfons Hoogervorst)
	
2005-02-12 [holger]	0.2cvs1

	* src/perl_plugin.c
		Don't compare signed and unsigned integers
		(reported by Alfons Hoogervorst)
	
2005-02-11 [holger]	0.2

	0.2 released

2005-02-11 [holger]	0.1.1cvs2

	* INSTALL NEWS configure.ac src/perl_plugin.c
	* NEWS
	* configure.ac
	* src/perl_plugin.c
		Code cleanups

2005-02-06 [holger]	0.1.1cvs1

	* AUTHORS
	* INSTALL
	* Makefile.am
	* README
	* configure.ac
	* src/Makefile.am
	* src/perl_plugin.c
	* tools/matcherrc2perlfilter.pl
	* NEWS					*** NEW FILE ***
	* sc_perl.pod				*** NEW FILE ***
		Update cvs repository to current project status.

2004-10-03 [holger]	0.1.1

	* configure.ac
	* src/perl_plugin.c
		Fix missing XSRETURN_UV for Perl 5.8.0 (reported by wwp)
	
2004-10-01 [holger]	0.1

	* initial release